[gd_scene load_steps=7 format=3 uid="uid://bk06uui08myjf"]

[ext_resource type="PackedScene" uid="uid://bgaadtx5bln0a" path="res://scenes/base_classes/tank.tscn" id="1_rx8kj"]
[ext_resource type="Script" path="res://scripts/enemy/enemy_tank.gd" id="2_00rm4"]
[ext_resource type="Texture2D" uid="uid://dqqhq656da0o2" path="res://sprites/tank_bodies/enemy_tank_body.png" id="3_h1gc8"]
[ext_resource type="Texture2D" uid="uid://bkhyi70hexmag" path="res://sprites/tank_turrets/enemy_tank_turret.png" id="4_io0t7"]
[ext_resource type="PackedScene" uid="uid://bdgfouvkixk75" path="res://scenes/ui/enemy_display.tscn" id="5_8727m"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_ltni6"]
size = Vector2(80, 84)

[node name="Enemy" instance=ExtResource("1_rx8kj")]
collision_layer = 4
collision_mask = 3
script = ExtResource("2_00rm4")
turret_speed = 2.0
detect_radius = 400
metadata/_edit_group_ = true

[node name="TankBody" parent="." index="0"]
texture = ExtResource("3_h1gc8")

[node name="Turret" parent="." index="1"]
texture = ExtResource("4_io0t7")
offset = Vector2(20, 0)

[node name="Muzzle" parent="Turret" index="0"]
position = Vector2(60, 0)

[node name="CollisionShape2D" parent="." index="2"]
shape = SubResource("RectangleShape2D_ltni6")

[node name="DetectRadius" type="Area2D" parent="." index="4"]
collision_layer = 4
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="DetectRadius" index="0"]

[node name="LookAhead1" type="RayCast2D" parent="." index="5"]
position = Vector2(0, -30)
target_position = Vector2(100, 0)
collision_mask = 7

[node name="LookAhead2" type="RayCast2D" parent="." index="6"]
position = Vector2(0, 30)
target_position = Vector2(100, 0)
collision_mask = 7

[node name="EnemyDisplay" parent="." index="7" instance=ExtResource("5_8727m")]

[connection signal="health_changed" from="." to="EnemyDisplay" method="update_healthbar"]
[connection signal="body_entered" from="DetectRadius" to="." method="_on_detect_radius_body_entered"]
[connection signal="body_exited" from="DetectRadius" to="." method="_on_detect_radius_body_exited"]
